alignment fix

--- a/website/static/css/style.css
+++ b/website/static/css/style.css
@@ -67,7 +67,6 @@ body {
     left: 50%;
     top: 50%;
     margin-top: -150px;
-    margin-left: -177px;
 }
 
 .coming-soon {
